--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <title>从我的全世界走过</title>
 
-<link href="../css/course.css" rel="stylesheet" type="text/css">
-<script src="../js/jquery-1.11.3.min.js" type="text/javascript" charset="utf-8"></script>
+<link href="css/course.css" rel="stylesheet" type="text/css">
+<script src="js/jquery-1.11.3.min.js" type="text/javascript" charset="utf-8"></script>
 <style>
     .text img{
         width: 360px;
@@ -63,7 +63,7 @@
                     <div class="bookTitle">你若盛开，蝴蝶自来</div>
                     <div class="bookContent">
                         <div class="text">
-                            <img src="../images/course/left.jpg" alt="">
+                            <img src="images/course/left.jpg" alt="">
                         </div>
                         <div class="bookImg">
                             <!-- <div class="prevBtn">&nbsp;</div> -->
@@ -82,7 +82,7 @@
                 	<div class="bookTitle">花自飘零水自流</div>
                     <div class="bookContent">
                         <div class="text">
-                                <img src="../images/course/right.jpg" alt="">
+                                 <img src="images/course/right.jpg" alt="">
                         </div>
                         <div class="bookImg">
                             <!-- <div class="prevBtn">&nbsp;</div> -->
@@ -109,7 +109,7 @@
                     <div class="bookTitle">你若盛开，蝴蝶自来</div>
                     <div class="bookContent">
                         <div class="text">
-                            <img src="../images/course/left.jpg" alt="">
+                            <img src="images/course/left.jpg" alt="">
                         </div>
                         <div class="bookImg">
                             <!-- <div class="prevBtn">&nbsp;</div> -->
@@ -128,7 +128,7 @@
                 	<div class="bookTitle">花自飘零水自流</div>
                     <div class="bookContent">
                         <div class="text">
-                                <img src="../images/course/right.jpg" alt="">
+                                 <img src="images/course/right.jpg" alt="">
                         </div>
                         <div class="bookImg">
                             <!-- <div class="prevBtn">&nbsp;</div> -->
@@ -155,7 +155,7 @@
                     <div class="bookTitle">你若盛开，蝴蝶自来</div>
                     <div class="bookContent">
                         <div class="text">
-                            <img src="../images/course/left.jpg" alt="">
+                            <img src="images/course/left.jpg" alt="">
                         </div>
                         <div class="bookImg">
                             <!-- <div class="prevBtn">&nbsp;</div> -->
@@ -174,7 +174,7 @@
                 	<div class="bookTitle">花自飘零水自流</div>
                     <div class="bookContent">
                         <div class="text">
-                                <img src="../images/course/right.jpg" alt="">
+                                 <img src="images/course/right.jpg" alt="">
                         </div>
                         <div class="bookImg">
                             <!-- <div class="prevBtn">&nbsp;</div> -->
@@ -201,7 +201,7 @@
                     <div class="bookTitle">你若盛开，蝴蝶自来</div>
                     <div class="bookContent">
                         <div class="text">
-                            <img src="../images/course/left.jpg" alt="">
+                            <img src="images/course/left.jpg" alt="">
                         </div>
                         <div class="bookImg">
                             <!-- <div class="prevBtn">&nbsp;</div> -->
@@ -220,7 +220,7 @@
                 	<div class="bookTitle">花自飘零水自流</div>
                     <div class="bookContent">
                         <div class="text">
-                                <img src="../images/course/right.jpg" alt="">
+                                 <img src="images/course/right.jpg" alt="">
                         </div>
                         <div class="bookImg">
                             <!-- <div class="prevBtn">&nbsp;</div> -->
@@ -247,7 +247,7 @@
                     <div class="bookTitle">你若盛开，蝴蝶自来</div>
                     <div class="bookContent">
                         <div class="text">
-                            <img src="../images/course/left.jpg" alt="">
+                            <img src="images/course/left.jpg" alt="">
                         </div>
                         <div class="bookImg">
                             <!-- <div class="prevBtn">&nbsp;</div> -->
@@ -266,7 +266,7 @@
                 	<div class="bookTitle">花自飘零水自流</div>
                     <div class="bookContent">
                         <div class="text">
-                                <img src="../images/course/right.jpg" alt="">
+                                 <img src="images/course/right.jpg" alt="">
                         </div>
                         <div class="bookImg">
                             <!-- <div class="prevBtn">&nbsp;</div> -->
@@ -293,7 +293,7 @@
                     <div class="bookTitle">你若盛开，蝴蝶自来</div>
                     <div class="bookContent">
                         <div class="text">
-                            <img src="../images/course/left.jpg" alt="">
+                            <img src="images/course/left.jpg" alt="">
                         </div>
                         <div class="bookImg">
                             <!-- <div class="prevBtn">&nbsp;</div> -->
@@ -312,7 +312,7 @@
                 	<div class="bookTitle">花自飘零水自流</div>
                     <div class="bookContent">
                         <div class="text">
-                                <img src="../images/course/right.jpg" alt="">
+                                 <img src="images/course/right.jpg" alt="">
                         </div>
                         <div class="bookImg">
                             <!-- <div class="prevBtn">&nbsp;</div> -->
@@ -339,7 +339,7 @@
                     <div class="bookTitle">你若盛开，蝴蝶自来</div>
                     <div class="bookContent">
                         <div class="text">
-                            <img src="../images/course/left.jpg" alt="">
+                            <img src="images/course/left.jpg" alt="">
                         </div>
                         <div class="bookImg">
                             <!-- <div class="prevBtn">&nbsp;</div> -->
@@ -358,7 +358,7 @@
                 	<div class="bookTitle">花自飘零水自流</div>
                     <div class="bookContent">
                         <div class="text">
-                                <img src="../images/course/right.jpg" alt="">
+                                 <img src="images/course/right.jpg" alt="">
                         </div>
                         <div class="bookImg">
                             <!-- <div class="prevBtn">&nbsp;</div> -->
@@ -385,7 +385,7 @@
                     <div class="bookTitle">你若盛开，蝴蝶自来</div>
                     <div class="bookContent">
                         <div class="text">
-                            <img src="../images/course/left.jpg" alt="">
+                            <img src="images/course/left.jpg" alt="">
                         </div>
                         <div class="bookImg">
                             <!-- <div class="prevBtn">&nbsp;</div> -->
@@ -404,7 +404,7 @@
                 	<div class="bookTitle">花自飘零水自流</div>
                     <div class="bookContent">
                         <div class="text">
-                                <img src="../images/course/right.jpg" alt="">
+                                 <img src="images/course/right.jpg" alt="">
                         </div>
                         <div class="bookImg">
                             <!-- <div class="prevBtn">&nbsp;</div> -->
@@ -431,7 +431,7 @@
                     <div class="bookTitle">你若盛开，蝴蝶自来</div>
                     <div class="bookContent">
                         <div class="text">
-                            <img src="../images/course/left.jpg" alt="">
+                            <img src="images/course/left.jpg" alt="">
                         </div>
                         <div class="bookImg">
                             <!-- <div class="prevBtn">&nbsp;</div> -->
@@ -450,7 +450,7 @@
                 	<div class="bookTitle">花自飘零水自流</div>
                     <div class="bookContent">
                         <div class="text">
-                                <img src="../images/course/right.jpg" alt="">
+                                 <img src="images/course/right.jpg" alt="">
                         </div>
                         <div class="bookImg">
                             <!-- <div class="prevBtn">&nbsp;</div> -->
@@ -513,9 +513,9 @@
 </div>
 
 
-<script src="../js/startMove.js"></script>
-<script src="../js/event.js"></script>
-<script src="../js/eventLibrary.js"></script>
+<script src="js/startMove.js"></script>
+<script src="js/event.js"></script>
+<script src="js/eventLibrary.js"></script>
 <script>
 
 
